# padic-rust

./: Cargo.toml  MIT-LICENSE.txt  README.md  Readme.md
src/: lib.rs  main.rs  ratio.rs
