# Manifest infos: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "padic"
version = "0.1.0"
edition = "2021"
description = "P-adic numbers in Rust"
license = "MIT"
authors = ["Philippe Cochin <philippe@cochin.fr>"]

repository = "https://github.com/sneakyweasel/rust-padic"
keywords = ["padic", "ratio", "math", "number"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
