# Manifest infos: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "padic"
version = "0.1.5"
edition = "2021"
description = "P-adic numbers in Rust"
license = "MIT"
authors = ["Philippe Cochin <philippe@cochin.fr>"]

readme = "README.md"
homepage = "https://github.com/sneakyweasel/padic-rust"
repository = "https://github.com/sneakyweasel/padic-rust"
keywords = ["padic", "math", "ratio", "number"]
categories = ["mathematics", "algorithms", "science"]

[dependencies]
